feat(snomed): Support "map to" reference sets in SnomedRefSetUtil